# cnest

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  build-nest-image  cnest  cnest.spec  create-homey-nest  create-nest  guess-container  mkdocs.yml  pyproject.toml  setup.cfg
cnest/: cnestify.py  create.py  getpath.py  guess.py
cnest/data/: cnest-entry  nestprompt.sh  setupuser  userinit
cnest/data/nestkit/: boostuser  userinit  usersetup
cnest/data/profile-d/: stowhome.sh
cnest/data/profile.d/: nestsignprompt.sh  stowhome.sh
cnest/data/starter-profiles/: only-downloads
completion/: cnest
config/: default.env
config/profiles/: isolated-docker-library  pulseaudio-app  wayland-app
docs/: Makefile  caveats.md  cnest-tools.md  conclusions.md  conf.py  history.md  how-to-rtd.md  how-to-share-partial-home.md  index.md  index.rst  install.md  other-tools.md  permission-profiles.md  podman.md  roadmap.md  temp-containers.md  tips.md  what-are-nest-containers.md
docs/examples/readthedocs/: Dockerfile
docs/howto/: gui.md  ping.md  stow.md  sudo.md
docs/tutorial/: diff-distro.md  limited-sharing.md  saving.md  start.md
examples/: README.md
examples/amazon_workspaces/: ADB332E7.asc  Dockerfile  build-image  cnest-entry  create-container
examples/cheese_wayland/: Dockerfile  build-image  cnest-entry  cnest-user-setup  create-container
examples/chrome_fedora/: .gitignore  Dockerfile  build-image  cnest-chrome.desktop  create-container  install-desktop-menu  uninstall-desktop-menu
examples/chrome_ubuntu/: .gitignore  Dockerfile  build-image  cnest-entry  cnest-user-setup  create-container
examples/chromium/: Dockerfile  build-image  cnest-chromium.desktop  cnest-entry  cnest-user-setup  create-container  install-desktop-menu  set-mime-default.sh  uninstall-desktop-menu
examples/profiles/: browser  development  pulseaudio-app
examples/pulseaudio-test/: Dockerfile  build-image  cnest-entry  create-container
examples/wayland-test/: Dockerfile  build-image  cnest-entry  create-container
hacks/: README.md  podman-copy-from-root.sh
options/: bridged  hostnet  ping  wayland  xwindow
prompt/: README.md  osvirtaliasprompt.sh
test/: inner-test.sh  storage.conf  test-cnest-in-podman.sh  test-podman-in-podman.sh
test/opt/: inner-install-cnest.sh  inner-test-nonroot.sh
test/prep-image/: Dockerfile
