[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cnest"
version = "2.0"
description = "Simple scripts for personalized persistent controlled containers"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
]
authors = [
  { name="Castedo Ellerman", email = "castedo@castedo.com" },
]

[project.urls]
Homepage = "https://github.com/castedo/cnest"

[project.scripts]
create-nest-container = "cnest.create:main"

[tool.setuptools]
packages = [
  "cnest",
  "cnest.data",
]
script-files = [
  "bin/cnest",
  "bin/cnest-ls",
  "bin/create-nest",
]

[tool.setuptools.data-files]
"completion" = ["completion/cnest"]

[tool.yapf]
column_limit = 88
based_on_style = "facebook"
