[metadata]
name = cnest
version = 1.4
author = Castedo Ellerman
author_email = castedo@castedo.com
description = Simple scripts for personalized persistent controlled containers
url = https://github.com/castedo/cnest
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
python_requires = >=3.6
packages = cnest
install_requires =
    setuptools
scripts =
    bin/cnest
    bin/create-nest
    bin/create-nest-by-tag
include_package_data = True

[options.entry_points]
console_scripts =
    guess-container = cnest.guess:main
    cnestify-image = cnest.cnestify:main

