[metadata]
name = cnest
version = 2.0
author = Castedo Ellerman
author_email = castedo@castedo.com
description = Simple scripts for personalized persistent controlled containers
url = https://github.com/castedo/cnest
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
python_requires = >=3.6
packages = cnest
scripts =
    bin/cnest
    bin/create-nest
include_package_data = True

[options.entry_points]
console_scripts =
    create-nest-container = cnest.create:main

[pycodestyle]
max-line-length = 88
ignore = E302, E401
